--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -46,6 +46,15 @@
             android:layout_marginRight="@dimen/spacing_major"
             android:background="@color/divider"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_minor"
+            android:text="订单详情"
+            android:textSize="@dimen/font_normal"
+            android:textColor="@color/primary_text"
+            android:background="@color/dark_gray_bg"
+            />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -165,7 +174,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/products"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="170dp" />
 
 
         <View
@@ -176,6 +185,20 @@
             android:layout_marginRight="@dimen/spacing_major"
             android:background="@color/divider"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/spacing_minor"
+            android:text="@string/label_choose_payment_source"
+            android:textSize="@dimen/font_normal"
+            android:textColor="@color/gray"
+            android:background="@color/dark_gray_bg"
+            />
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/s_main_spinner"
+            ></Spinner>
 
         <LinearLayout
             style="@style/CardItem.AutoHeight"
