--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -23,41 +23,63 @@
             android:layout_marginRight="@dimen/content_margin"
             android:layout_marginTop="@dimen/content_padding"
             android:scaleType="fitCenter"
-            android:src="@drawable/login_name"
+            android:src="@drawable/ic_lock"
             />
 
         <EditText
-            android:id="@+id/et_nickName"
+            android:id="@+id/et_oldPassword"
             android:layout_width="0.0dip"
             android:layout_height="match_parent"
             android:layout_weight="1.0"
             android:layout_gravity="center_vertical"
             android:maxLength="20"
-            android:hint="@string/hint_edit_nickname"
+            android:hint="请输入原密码"
             android:background="@null"
             style="@style/Widget.LazyOrder.EditText"
             />
 
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/cell_normal"
+        android:layout_margin="@dimen/spacing_major"
+        android:padding="@dimen/divider_size"
+        android:background="@drawable/btn_radius_all_normal"
+        >
+
         <ImageView
-            android:id="@+id/btn_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/spacing_major"
-            android:layout_marginRight="@dimen/spacing_major"
-            android:scaleType="centerCrop"
-            android:src="@drawable/btn_edit_delete"
-            android:visibility="gone"
+            android:layout_marginBottom="@dimen/content_padding"
+            android:layout_marginLeft="@dimen/content_margin"
+            android:layout_marginRight="@dimen/content_margin"
+            android:layout_marginTop="@dimen/content_padding"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_lock"
             />
+
+        <EditText
+            android:id="@+id/et_newPassword"
+            android:layout_width="0.0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1.0"
+            android:layout_gravity="center_vertical"
+            android:maxLength="20"
+            android:hint="请输入新密码"
+            android:background="@null"
+            style="@style/Widget.LazyOrder.EditText"
+            />
+
 
     </LinearLayout>
 
     <Button
-        android:id="@+id/bt_setNickName"
+        android:id="@+id/bt_password"
         android:layout_width="match_parent"
         android:layout_height="@dimen/cell_normal"
         android:layout_margin="@dimen/spacing_major"
-        android:text="@string/btn_save"
+        android:text="确认"
         style="@style/Widget.LazyOrder.Button"
         />
 
