--- a/app/src/main/res/layout/fg_user_center.xml
+++ b/app/src/main/res/layout/fg_user_center.xml
@@ -99,7 +99,8 @@
                         android:layout_gravity="center_vertical"
                         >
 
-                        <ImageView
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            xmlns:app="http://schemas.android.com/apk/res-auto"
                             android:id="@+id/img_account_avatar1"
                             android:layout_width="@dimen/avatar_width"
                             android:layout_height="@dimen/avatar_height"
@@ -110,15 +111,15 @@
                             android:id="@+id/txt_account_name1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_toRightOf="@+id/img_account_avatar1"
-                            android:layout_toEndOf="@+id/img_account_avatar1"
-                            android:layout_margin="@dimen/spacing_minor"
+                            android:layout_alignLeft="@+id/txt_mobileN"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignStart="@+id/txt_mobileN"
+                            android:layout_marginTop="15dp"
                             android:text="123456"
-                            android:textSize="@dimen/font_large"
-                            android:textStyle="bold"
-                            android:textColor="?android:attr/textColorPrimaryInverse"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                            />
+                            android:textColor="?android:attr/textColorPrimaryInverse"
+                            android:textSize="@dimen/font_large"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/txt_mobileN"
