--- a/app/src/main/res/layout/product_listview_item.xml
+++ b/app/src/main/res/layout/product_listview_item.xml
@@ -22,15 +22,15 @@
             android:id="@+id/tv_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginBottom="8dp"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:text="商品名" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="5dp"
             >
 
             <TextView
@@ -57,14 +57,16 @@
             android:layout_height="0dp"
             android:text="店铺名称" />
 
-        <TextView
-            android:id="@+id/tv_product_detail"
+        <RatingBar
+            android:id="@+id/ratingBar"
             android:layout_width="wrap_content"
+            style="@style/WidgetRatingBarSmall"
             android:layout_height="wrap_content"
-            android:minHeight="80dp"
-            android:singleLine="true"
-            android:ellipsize="end"
-            android:text="商品详情" />
+            android:numStars="5"
+            android:isIndicator="true"
+            android:rating="3"
+            android:max="5"
+            />
     </LinearLayout>
 
     <LinearLayout
