--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,4 +63,56 @@
         <item name="android:layout_width">match_parent</item>
     </style>
 
+    <style name="Title" parent="@style/Txt">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:textColor">@color/primary_text</item>
+    </style>
+    <style name="Title.Card" parent="@style/Title">
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:gravity">center|left</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">44.0dip</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:drawablePadding">@dimen/spacing_minor</item>
+    </style>
+    <style name="Title.Card.WithPadding" parent="@style/Title.Card">
+        <item name="android:paddingLeft">@dimen/spacing_major</item>
+        <item name="android:paddingRight">@dimen/spacing_major</item>
+    </style>
+    <style name="Card">
+        <item name="android:orientation">vertical</item>
+        <item name="android:background">@drawable/bg_card</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/spacing_major</item>
+    </style>
+    <style name="Card.WithDivider" parent="@style/Card">
+        <item name="android:divider">@drawable/divider_horizontal</item>
+        <item name="android:showDividers">middle</item>
+        <item name="android:dividerPadding">@dimen/spacing_major</item>
+    </style>
+    <style name="CardItem.FixedHeight" parent="@style/CardItem">
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:layout_height">@dimen/cell_normal</item>
+    </style>
+    <style name="Txt.Main" parent="@style/Txt">
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/primary_text</item>
+        <item name="android:textColorHint">@color/secondary_text</item>
+    </style>
+    <style name="Txt.Main.Weighted" parent="@style/Txt.Main">
+        <item name="android:layout_width">0.0dp</item>
+        <item name="android:layout_weight">1.0</item>
+    </style>
+    <!-- 星星的特效 -->
+    <style name="WidgetRatingBarSmall" parent="@android:style/Widget.RatingBar">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/rating_img</item>
+        <item name="android:indeterminateDrawable">@drawable/rating_img</item>
+        <item name="android:minHeight">20dip</item>
+        <item name="android:maxHeight">20dip</item>
+        <item name="android:thumb">@null</item>
+        <item name="android:isIndicator">true</item>
+    </style>
 </resources>
