--- a/app/src/main/res/layout/fg_content.xml
+++ b/app/src/main/res/layout/fg_content.xml
@@ -43,11 +43,15 @@
             />
 
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_"
+    <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
+        android:id="@+id/refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
 
 </LinearLayout>
