--- a/app/src/main/res/layout/activity_shopping.xml
+++ b/app/src/main/res/layout/activity_shopping.xml
@@ -74,6 +74,10 @@
 
     </LinearLayout>
 
+    <!--<com.jwenfeng.library.pulltorefresh.PullToRefreshLayout-->
+        <!--android:id="@+id/refreshProduct"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
 
     <ListView
         android:id="@+id/lv_product"
@@ -82,6 +86,7 @@
         android:layout_weight="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp" />
+    <!--</com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>-->
 
     <LinearLayout
         android:id="@+id/bottom_layout"
