--- a/app/src/main/res/layout/fg_order_content.xml
+++ b/app/src/main/res/layout/fg_order_content.xml
@@ -5,9 +5,15 @@
     >
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_order"
+    <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
+        android:id="@+id/refresh_order"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_order"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
 
 </LinearLayout>
