--- a/app/src/main/res/layout/fg_content.xml
+++ b/app/src/main/res/layout/fg_content.xml
@@ -35,6 +35,7 @@
             android:background="@drawable/search_edit_bg"
             android:drawablePadding="16dp"/>
         <ImageView
+            android:id="@+id/img_search"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/search"
